--- a/package.json
+++ b/package.json
@@ -1,29 +1,52 @@
 {
-  "main": "node_modules/expo/AppEntry.js",
+  "name": "reanimated-modal",
+  "version": "0.0.3",
+  "description": "react-native modal implemented with react-native-reanmated",
+  "main": "dest/module/index.js",
+  "author": "vamshi9666@riseup.net",
+  "license": "MIT",
+  "private": false,
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web",
-    "eject": "expo eject"
+    "lint": " npx eslint --ext .ts,.tsx lib",
+    "tsc": "tsc  lib/* --jsx react-native --noEmit",
+    "check": "yarn run lint &&  yarn run tsc",
+    "pre-build": "yarn run check",
+    "build": "bob build"
   },
   "dependencies": {
-    "expo": "~36.0.0",
-    "react": "~16.9.0",
-    "react-dom": "~16.9.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
-    "react-native-gesture-handler": "~1.5.0",
-    "react-native-reanimated": "~1.4.0",
-    "react-native-screens": "2.0.0-alpha.12",
-    "react-native-web": "~0.11.7",
     "use-memo-one": "^1.1.1"
   },
-  "devDependencies": {
-    "@babel/core": "^7.0.0",
-    "@types/react": "~16.9.0",
-    "@types/react-native": "~0.60.23",
-    "babel-preset-expo": "~8.0.0",
-    "typescript": "~3.6.3"
+  "peerDependencies": {
+    "react": "*",
+    "react-native": "*",
+    "react-native-gesture-handler": "*",
+    "react-native-reanimated": "*"
   },
-  "private": true
+  "@react-native-community/bob": {
+    "source": "lib",
+    "output": "dest",
+    "targets": [
+      "module",
+      "typescript"
+    ]
+  },
+  "devDependencies": {
+    "@react-native-community/bob": "^0.4.1",
+    "@types/color": "^3.0.0",
+    "@types/jest": "^25.1.4",
+    "@types/react": "*",
+    "@types/react-native": "^0.60.25",
+    "@typescript-eslint/eslint-plugin": "^2.23.0",
+    "@typescript-eslint/parser": "^2.23.0",
+    "babel-jest": "^24.9.0",
+    "babel-preset-expo": "^8.0.0",
+    "eslint": "^6.7.2",
+    "eslint-config-react-native-wcandillon": "2.3.4",
+    "eslint-plugin-react": "^7.19.0",
+    "react": "^16.8.6",
+    "react-native": "^0.61.0",
+    "react-native-gesture-handler": "~1.5.0",
+    "react-native-reanimated": "^1.4.0",
+    "typescript": "^3.6.2"
+  }
 }
